--- a/canaveral/Style.css
+++ b/canaveral/Style.css
@@ -45,7 +45,7 @@ header a img{
     background-image: linear-gradient(
         0deg, rgba(0,0,0,0.7),rgba(0,0,0,0.7)
     )
-    ,url("/img/hero.jpg");
+    ,url("img/hero.jpg");
     background-repeat:no-repeat;
     background-size: cover;
     background-position: bottom;
