--- a/canaveral/css/style.css
+++ b/canaveral/css/style.css
@@ -286,11 +286,70 @@ GAlery
 
 /* estilos de contenedores web */
 .container-web-page{
-	padding-top: 50px;
+	padding-top: 80px;
 	padding-bottom: 30px;
+	text-align: center;
 }
-
-
+.container-web-page h2{
+	font-size: 60px;
+	text-align: center;
+}
+.Lista-menu{
+	list-style: none;
+	font-size: 41px;
+	font-weight:bold;	
+}
+.container-web-page .Lista-menu ul{
+	display: inline-block;
+}
+.carta{
+	margin-top: 30px;
+	padding-top: 50px;
+}
+.carta h2{
+	font-size: 40px;
+	text-align: center;
+	font-weight: 900;
+}
+.carta section img{
+	width: 70%;
+	height: 70%;
+	border-radius: 200px 0px 200px 0px;
+}
+.carta .imagenes{
+	text-align: center;
+	width: 50%;
+	height: 50%;
+}
+.carta .direccion{
+	display:inline-table;
+}
+.izq, 
+.der{
+ display: inline-block;
+}
+.izq h3, 
+.der h3{
+ font-size:25px;
+ font-weight: 900;
+}
+ .izq hr{
+	height: 5px;
+	margin-left: 0%;
+	margin-right: 1%;
+	background-color: #009C3E;
+	margin-top: 5px;
+	margin-bottom: 5px;
+ }
+ .der hr{
+	height: 5px;
+	margin-left: -1%;
+	margin-right: 75%;
+	background-color: #009C3E;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	  
+ }
 /* estilos cards*/
 .container-cards{
 	display: flex;
@@ -376,7 +435,6 @@ GAlery
 	.banner-body{
 		font-size: 15px;
 	}
-	
 }
 
 @media (max-width: 980px){
