--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -479,6 +479,56 @@ section {
 .services .icon-box {
   margin-bottom: 20px;
 }
+.carta-container{
+  width:100%;
+  display: flex;
+  max-width: 1100px;
+}
+.carta{
+  display: block;
+  width: 100%;
+  margin: 20px;
+  border-radius: 6px;
+  overflow: hidden;
+  background-color: whitesmoke;
+  box-shadow: 0 2px 13px rgb(0,0,0,.2);
+  transition: all 400ms ease;
+}
+.carta img{
+  width: 100%;
+  height: 200px;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+}
+.carta:hover{
+  transform:  translateY(-4%);
+  box-shadow: 2px 4px 20px rgb(0,0,0,.5);
+}
+.carta h3{
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+}
+.contenido p{
+  text-align: justify;
+  padding: 0 10px;
+  font-size: 13px;
+  height: 80px;
+}
+.contenido a{
+  text-align: center;
+  margin: 0 auto 20px;
+  display: block;
+  border:  1px solid #2eafec;
+  border-radius: 4px;
+  width: 50%;
+}
+.contenido a:hover{
+  color: whitesmoke;
+  background-color: #2eafec;
+  transition: all 400ms ease-in;
+}
 .services .icon {
   float: left;
   display: flex;
