--- a/Login/asset/style/style.css
+++ b/Login/asset/style/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(./img/pexels-yan-krukov-9072216.jpg);
+    background-image: url(../img/pexels-yan-krukov-9072216.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
